Update Hydra for new version

--- a/.gitignore
+++ b/.gitignore
@@ -117,3 +117,7 @@ data/*
 segmentation_models_pytorch/experiments/*
 segmentation_models_pytorch/*.pth
 segmentation_models_pytorch/data/
+Hydra/hydra_1.0/outputs/*
+Hydra/hydra_1.0/experiments/*
+Hydra/testing_error/outputs/*
+Hydra/testing_error/experiments/*
