Locator, Dendrite AUG, plotly + Fix learning rate for Locator + AUG for Dendrite: :random_noise or random_image + Still fixing for zoom-in in plotly

--- a/.gitignore
+++ b/.gitignore
@@ -121,3 +121,6 @@ Hydra/hydra_1.0/outputs/*
 Hydra/hydra_1.0/experiments/*
 Hydra/testing_error/outputs/*
 Hydra/testing_error/experiments/*
+
+spinningup/spinningup
+spinningup/spinningup/*
