Update cls to target for hydra; Update SeedRec visualization.

--- a/Hydra/hydra_1.0/conf/db/mysql.yaml
+++ b/Hydra/hydra_1.0/conf/db/mysql.yaml
@@ -2,7 +2,7 @@
 driver: mysql
 user: khoa_mysql
 pass: secret_mysql
-cls: main.MySQLConnection
+target: main.MySQLConnection
 params:
   host: localhost
   user: root
