--- a/Hydra/hydra_1.0/conf/db/postgresql.yaml
+++ b/Hydra/hydra_1.0/conf/db/postgresql.yaml
@@ -2,7 +2,7 @@
 driver: post_mysql
 user: post_khoa
 pass: post_secret
-cls: main.PostgreSQLConnection
+target: main.PostgreSQLConnection
 params:
   host: localhost
   user: root
