--- a/Hydra/hydra_1.0/configs/agent/locator.yaml
+++ b/Hydra/hydra_1.0/configs/agent/locator.yaml
@@ -1,6 +1,6 @@
 agent:
   name: Locator
-  cls: agents.locator.LocatorAgent
+  target: agents.locator.LocatorAgent
 
   continuous: false
   lstm_feats: 0
@@ -24,7 +24,7 @@ agent:
 
   env:
     name: Locator_env
-    cls: graphs.env.LocatorEnv.locator_env
+    target: graphs.env.LocatorEnv.locator_env
 
     del_lbl:
       use: False
