--- a/Hydra/hydra_1.0/configs/model/deeplabv3.yaml
+++ b/Hydra/hydra_1.0/configs/model/deeplabv3.yaml
@@ -1,6 +1,6 @@
 model:
   name: deeplabv3_resnet101
-  cls: torch.hub.load
+  target: torch.hub.load
   params:
     github: "pytorch/vision:v0.5.0"
     model: "deeplabv3_resnet101"
