update aug name

--- a/Hydra/hydra_1.0/configs/recoverRL.yaml
+++ b/Hydra/hydra_1.0/configs/recoverRL.yaml
@@ -221,7 +221,7 @@ dataset:
       k_channel: 2
     shuffle_Maxlbl: true
 
-    aug:
+    pre_aug:
       down_scale: 1
       RandomSizedCrop:
         use: false # if false, use RandomCrop
